# InterProcessCommunication-Unix

./: README.md
ipc-fifo/: receiver.cpp  sender.cpp
ipc-files/: receiver.cpp  sender.cpp
ipc-memory-map/: CMakeLists.txt  receiver.cpp  sender.cpp
ipc-message/: receiver.cpp  sender.cpp
ipc-message-posix/: CMakeLists.txt  receiver.cpp  sender.cpp
ipc-pipe/: CMakeLists.txt  pipe.cpp
ipc-shared-memory/: receiver.cpp  sender.cpp
ipc-shared-memory-posix/: CMakeLists.txt  receiver.cpp  sender.cpp
ipc-shared-memory-semaphore/: CMakeLists.txt  receiver.cpp  sender.cpp  shm_sem.h
ipc-socket/: CMakeLists.txt  receiver.cpp  sender.cpp
